fix scroll issues on mobile

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -2,7 +2,7 @@ body {
   overflow: hidden;
 }
 
-@media (max-width: 550px) {
+@media (max-width: 750px) {
   body {
     overflow: visible;
   }
