--- a/frontend/src/components/recipe-list/RecipeList.css
+++ b/frontend/src/components/recipe-list/RecipeList.css
@@ -73,7 +73,7 @@
   }
 } */
 
-.default-container {
+.default-container-recipe-list {
   background: white;
   padding: 50px;
   border-radius: 5px;
